Changelog

$Id: Changes,v 1.57 2011-02-13 11:29:24 oops Exp $

* Sat, Feb 14 2011
	- fixed trim that return 0 byte about 1byte string
	- thread safe about errno
	- rewrite str2double, strtoupper, strtolower
	- rewrite libfile.c

* Sun, Feb  8 2011
	- add addslashes_r for binary safe

* Sun, Feb  7 2011
	- fixed trim api that don't remove back spaces.

* Sun, Feb  6 2011
	- fixed idn memory leak
	- adjust GCC visibility extension

* Sat, Dec  5 2009
	- add is_ksc5601

* Fri, Oct 20 2009
	- add realpath_r

* Fri, Jun  9 2006
	- update autogen
	- start 0.1.3

* Thu, Sep  1 2005
	- fixed CAN-2005-2491 in pcrelib
	- < release 0.1.2 >

* Mon, Aug  9 2004
	- changed filename commoh.h to oc_common.h
	- fixed typo in Makefile.in
	- < release 0.1.1 >

* Fri, Aug  6 2004
	- fixed iconv problem on liboc that conflict gpl license problem
	- imported libtool system

* Mon, Jun 21 2004
	- Support FreeBSD
	- added ax_create_stdint_h.m4 file
	- allow autoconf 2.59 and automake 1.8

* Wed, Feb 18 2004
	- < release 0.1.0 >

* Wed, Feb 18 2004
	by JoungKyun Kim <http://oops.org>
	- fixed miss declaration on stringprep_locale_charset_cache variable
	- fixed invalid function type
	- removed routine case of return 0 on o_getopt function
	- devided license with BPL and LGPL (liboc and libogc)

* Tue, Feb 10 2004
	by JoungKyun Kim <http://oops.org>
	- changed stringprep_locale_charset_cache to extern

* Sat, Feb  7 2004
	by JoungKyun Kim <http://oops.org>
	- changed exit code to return source variable on idn code

* Wed, Feb  4 2004
	by JoungKyun Kim <http://oops.org>
	- updated libidn library 0.3.7
	- < release 0.0.8 >

* Tue, Feb  3 2003
	by JoungKyun Kim <http://oops.org>
	- added bin2hex function
	- fixed convert_racecode ugly parsing bug

* Mon, Nov 10 2003
	by JoungKyun Kim <http://oops.org>
	- update trim_r and trim function
	- < release 0.0.7 >

* Mon, Nov 10 2003
	by JoungKyun Kim <http://oops.org>
	- fixed ugly return value of trim and trim_r
	- < release 0.0.6 >
